# resume-graph

./: .gitignore  Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml
docs/: architecture-sequence.md  backlog_20260720.md  backlog_20260721.md  publishing.md  upload_report_20260717.md
docs/adr/: 0001-roleframing-projection.md
docs/journal/: 2026-07-17_02.md  2026-07-18.md  2026-07-19.md  2026-07-20.md  2026-07-23.md  INDEX.md
journal/: 2026-07-17.md  INDEX.md
ontology/: shapes.ttl
pipeline/: build.py  project.py  validate.py
pipeline/exports/: graph_html.py  json_resume.py  pdf.py  resume_model.py
pipeline/exports/templates/: graph.html  resume.css
site/public/: robots.txt
tests/: test_build.py  test_exports.py  test_project.py  test_validate.py
tests/fixture-vault/: context.jsonld
tests/fixture-vault-dangling/: context.jsonld  orphan.md
tests/fixture-vault/gadgets/: toaster.md
tests/fixture-vault/parts/: AA Battery.md
validation/: shapes.ttl
vault/: context.jsonld  profile.md
vault/Ontologies/rg/: context.jsonld  (+1 more)
vault/_data/: profile.md
vault/bullets/: dm-epam-cross-functional-team.md  resume-graph-validation-gate.md
vault/education/: BSc Computer Science.md
vault/organizations/: Acme Consulting.md  State University.md
vault/positions/: Delivery Manager — EPAM.md  Senior Software Engineer — Acme Consulting.md
vault/projects/: Biomedical GraphRAG Bench.md  Personal Finances Lakehouse.md
vault/skills/: CSharp.md  Docker.md  Python.md  SPARQL.md  SQL.md
(+301 files in other folders)
