[project]
name = "resume-graph"
version = "0.1.0"
description = "Resume-as-knowledge-graph: Vault-LD vault exported to RDF, SHACL-validated, published"
requires-python = ">=3.12"
dependencies = [
    "rdflib>=7.1",
    "pyshacl>=0.30",
    "pyyaml>=6.0",
    "weasyprint>=63",
]

[dependency-groups]
dev = ["pytest>=8.3"]

# Not an installable package — a pipeline run in place. uv syncs deps only.
[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
